- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    None
- 
    6.0.0 RC
- 
    None
- 
        1e0f2be5ac60884f0164f9b9dc2f8cffb21a969a (qt/qtbase/dev)
The following code segfaults as a result of the `qDebug`:
#include <QtCore/QDebug> #include <QtCore/QVariantHash> #include <list> int main(int, char**) { std::list<int> sdl; auto containerVariant = QVariant::fromValue(sdl); QVariantHash vh; vh.insert(QStringLiteral("container"), containerVariant); QVariant varppp; varppp = vh.value(QStringLiteral("container")); qDebug() << varppp; return 0; }
It also segfaults when the `qDebug` is removed, due to the `QVariant` destructor.
- relates to
- 
                    QTBUG-87687 QAssociativeIterable access always successful if container has zero key -         
- Closed
 
-         
- 
                    QTBUG-87688 [REG 5.15->6.0] QAssociativeIterable wraps returned values in QVariant -         
- Closed
 
-