Do not store non relocatable types in QVariants internal storage

This mostly reverts change 76e8e8e9c8093f093cb9f37d61d273f43398fefb.
The reason is that storing non relocatable types inline in
QVariants storage would implicitly make QVariant non relocatable.

Fixes: QTBUG-87686
Change-Id: I2a09b1dcdd907d60085dccf17f987086dcba878c
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>